# Slope-Graphing-Calculator

./: CMakeLists.txt  README.md  line.cpp  line.h  point.cpp  point.h  slopeCalc.cpp  slopeCalc.h
